--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   "dependencies": {
     "debug": "^2.2.0",
     "k-bucket": "^3.0.2",
-    "simple-peer": "^6.0.4",
-    "ws": "^1.1.1"
+    "simple-peer": "^6.0.4"
   },
   "devDependencies": {
     "browserify": "^13.1.0",
